span break word too :(

--- a/test/runner.html
+++ b/test/runner.html
@@ -30,6 +30,21 @@
       Равно как нет никого, кто возлюбил бы, предпочел и возжаждал бы само страдание только за то, что это страдание, а не потому, что иной раз возникают такие обстоятельства, когда страдания и боль приносят некое и немалое наслаждение.
     </div>
 
+    <h3>#d</h3>
+    <div id="d" style="width: .5em; overflow: hidden">
+      a b
+    </div>
+
+    <h3>#e</h3>
+    <div id="e" style="width: .5em; overflow: hidden">
+      a
+    </div>
+
+    <h3>#f</h3>
+    <div id="f" style="width: .5em; overflow: hidden">
+
+    </div>
+
     <script src="../index.js"></script>
     <script src="../bower_components/mocha/mocha.js"></script>
     <script src="../bower_components/should/should.js"></script>
