--- a/test/runner.html
+++ b/test/runner.html
@@ -7,42 +7,53 @@
     <title>Mocha Test Runner</title>
     <link rel="stylesheet" href="../bower_components/mocha/mocha.css">
     <style>
-      #a, #b, #c {
-        font-family: Arial;
+      @font-face {
+          font-family: 'Lobster';
+          src: url(Lobster.woff) format('woff');
+      }
+      .test {
+        margin: 1em;
+      }
+      .test div {
+        border: 1px solid silver;
+        overflow: hidden;
+        font-family: 'Lobster', cursive;
       }
     </style>
   </head>
   <body>
     <div id="mocha"></div>
 
-    <h2>#a</h2>
-    <div id="a" style="width: 10em; overflow: hidden">
-      Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни.
-    </div>
+    <div class="test">
+      <h2>#a</h2>
+      <div id="a" style="width: 10em;">
+        Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни.
+      </div>
 
-    <h2>#b</h2>
-    <div id="b" style="width: 30em; overflow: hidden">
-      Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни.
-    </div>
+      <h2>#b</h2>
+      <div id="b" style="width: 50em;">
+        Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни.
+      </div>
 
-    <h3>#c</h3>
-    <div id="c" style="width: 10em; overflow: hidden">
-      Равно как нет никого, кто возлюбил бы, предпочел и возжаждал бы само страдание только за то, что это страдание, а не потому, что иной раз возникают такие обстоятельства, когда страдания и боль приносят некое и немалое наслаждение.
-    </div>
+      <h3>#c</h3>
+      <div id="c" style="width: 10em;">
+        Равно как нет никого, кто возлюбил бы, предпочел и возжаждал бы само страдание только за то, что это страдание, а не потому, что иной раз возникают такие обстоятельства, когда страдания и боль приносят некое и немалое наслаждение.
+      </div>
 
-    <h3>#d</h3>
-    <div id="d" style="width: .5em; overflow: hidden">
-      a b
-    </div>
+      <h3>#d</h3>
+      <div id="d" style="width: .6em;">
+        a b
+      </div>
 
-    <h3>#e</h3>
-    <div id="e" style="width: .5em; overflow: hidden">
-      a
-    </div>
+      <h3>#e</h3>
+      <div id="e" style="width: .6em;">
+        a
+      </div>
 
-    <h3>#f</h3>
-    <div id="f" style="width: .5em; overflow: hidden">
+      <h3>#f</h3>
+      <div id="f">
 
+      </div>
     </div>
 
     <script src="../index.js"></script>
