--- a/test/runner.html
+++ b/test/runner.html
@@ -40,11 +40,6 @@
         Равно как нет никого, кто возлюбил бы, предпочел и возжаждал бы само страдание только за то, что это страдание, а не потому, что иной раз возникают такие обстоятельства, когда страдания и боль приносят некое и немалое наслаждение.
       </div>
 
-      <h3>#break-word</h3>
-      <div id="break-word" style="width: 5em; word-wrap: break-word">
-        Но чтобы вы поняли, откуда возникает это превратное представление людей
-      </div>
-
       <h3>#d</h3>
       <div id="d" style="width: .6em;">
         a b
@@ -56,8 +51,11 @@
       </div>
 
       <h3>#f</h3>
-      <div id="f">
+      <div id="f"></div>
 
+      <h3>#break-word</h3>
+      <div id="break-word" style="width: 5em; word-wrap: break-word">
+        Но чтобы вы поняли, откуда возникает это превратное представление людей
       </div>
     </div>
 
@@ -68,7 +66,10 @@
     <script src="spec/test.js"></script>
     <script>
       if (window.mochaPhantomJS) {
-        mochaPhantomJS.run();
+        // for apply fonts
+        setTimeout(function() {
+          mochaPhantomJS.run();
+        }, 0);
       } else {
         mocha.run();
       }
